[tool.poetry]
name = "tennis-api"
version = "0.1.0"
description = "Simple Tennis API in Python"
authors = ["wojwarych"]
readme = "README.md"
packages = [{include = "tennis_api"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
