[tool.poetry]
name = "tennis-api"
version = "0.1.0"
description = "Simple Tennis API in Python"
authors = ["wojwarych"]
readme = "README.md"
packages = [{include = "tennis_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
